# tasker

./: .env.example  LICENSE  README.md  package.json
.github/workflows/: release.yml
scripts/: build-release.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: auth.rs  files.rs  mod.rs  recording.rs  replay.rs  runs.rs  settings.rs  taskfile.rs  webview.rs  workflow.rs
src-tauri/src/db/: mod.rs  models.rs  repository.rs
src-tauri/src/scripts/: recording.js
src-tauri/src/sidecar/: manager.rs  mod.rs
src-tauri/src/taskfile/: converter.rs  env_resolver.rs  exporter.rs  mod.rs  models.rs  parser.rs
src/lib/components/: BrowserTabs.svelte  EmbeddedBrowser.svelte  LoginModal.svelte  WorkflowCard.svelte
src/lib/components/files/: FileCard.svelte  FileList.svelte  FileViewer.svelte  FileViewerModal.svelte
src/lib/components/files/viewers/: CsvViewer.svelte  DocViewer.svelte  ExcelViewer.svelte  FallbackViewer.svelte  ImageViewer.svelte  MarkdownViewer.svelte  PdfViewer.svelte  TextViewer.svelte
src/lib/services/: authService.ts  filesService.ts  runsService.ts  settingsService.ts  sidecarService.ts  taskfileService.ts  webviewService.ts  workflowService.ts
src/lib/stores/: auth.svelte.ts  files.svelte.ts  runs.svelte.ts  workflow.svelte.ts
src/lib/types/: file.ts  run.ts  taskfile.ts  workflow.ts
src/lib/utils/: stepFormatter.ts
src/routes/: +layout.svelte  +layout.ts  +page.svelte  layout.css
src/routes/files/: +page.svelte
src/routes/record/: +page.svelte
src/routes/replay/[id]/: +page.svelte
src/routes/runs/: +page.svelte
src/routes/runs/[id]/: +page.svelte
src/routes/settings/: +page.svelte
src/routes/workflows/: +page.svelte
src/routes/workflows/[id]/: +page.svelte
src/routes/workflows/new/: +page.svelte
tasker-sidecar/: .gitignore  Cargo.toml
tasker-sidecar/src/: config.rs  error.rs  lib.rs  main.rs
tasker-sidecar/src/agent/: message_builder.rs  mod.rs  workflow_agent.rs
tasker-sidecar/src/api/: mod.rs  routes.rs  state.rs  websocket.rs
tasker-sidecar/src/api/handlers/: files.rs  health.rs  mod.rs  os.rs  providers.rs  recording.rs  replay.rs  runs.rs  workflow.rs
tasker-sidecar/src/browser/: actions.rs  dom.rs  manager.rs  mod.rs
tasker-sidecar/src/browser/cdp_dom/: builder.rs  extractor.rs  filter.rs  mod.rs  serializer.rs  types.rs
tasker-sidecar/src/desktop/: accessibility.rs  annotator.rs  grid.rs  input.rs  manager.rs  mod.rs  screenshot.rs  serializer.rs  types.rs
tasker-sidecar/src/desktop/platform/: linux.rs  macos.rs  mod.rs  windows.rs
tasker-sidecar/src/llm/: client.rs  mod.rs  prompts.rs  railway_client.rs
tasker-sidecar/src/models/: mod.rs  recorded_action.rs  requests.rs  responses.rs  session.rs  workflow.rs
tasker-sidecar/src/recording/: ai_enhancer.rs  mod.rs  recorder.rs
tasker-sidecar/src/replay/: executor.rs  mod.rs
tasker-sidecar/src/runs/: executor.rs  file_models.rs  logger.rs  mod.rs  models.rs  os_executor.rs  repository.rs  spawner.rs
tasker-sidecar/src/tools/: browser_tools.rs  desktop_tools.rs  excel_tools.rs  filesystem_tools.rs  memory_tools.rs  mod.rs  orchestration_tools.rs  os_tools.rs  registry.rs  terminal_tools.rs
tasker-sidecar/tests/: recording_integration.rs
tasker-sidecar/tests/fixtures/: test_page.html
