[package]
name = "tasker"
version = "0.1.0"
description = "Browser Automation Recording & Replay"
authors = ["you"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "tasker_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.2", features = ["tray-icon", "unstable"] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }

# Async
tokio = { version = "1", features = ["full"] }

# Utils
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"

# HTTP client for sidecar communication
reqwest = { version = "0.12", features = ["json"] }
tokio-tungstenite = "0.24"

# YAML parsing for Taskfile
serde_yaml = "0.9"
regex-lite = "0.1"

# File dialog
tauri-plugin-dialog = "2"

# Deep linking for auth callbacks
tauri-plugin-deep-link = "2"

# Secure credential storage
keyring = "3"

# Browser opening
open = "5"

# Environment variables from .env files
dotenvy = "0.15"
