[package]
name = "tasker-sidecar"
version = "0.1.0"
edition = "2021"
description = "Rust sidecar for Tasker browser automation"

[dependencies]
# Web framework (API server)
axum = { version = "0.7", features = ["ws", "macros"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# WebSocket
futures-util = "0.3"

# Browser automation (CDP - Chrome DevTools Protocol)
chromiumoxide = { version = "0.7", default-features = false, features = ["tokio-runtime"] }

# LLM providers (unified API for Claude, OpenAI, Gemini)
genai = "0.4"

# Image processing (screenshots)
image = "0.25"
base64 = "0.22"

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0"
anyhow = "1.0"
dashmap = "6.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
regex = "1.10"
dotenvy = "0.15"
async-trait = "0.1"
urlencoding = "2.1"

# Local config (read API keys from Tauri's database)
rusqlite = { version = "0.32", features = ["bundled"] }
dirs = "5.0"

# HTTP client for Railway proxy
reqwest = { version = "0.12", features = ["json"] }

# Secure credential storage (to read auth token)
keyring = "3"

# MIME type detection for file storage
mime_guess = "2.0"

# OS automation - cross-platform input simulation
enigo = "0.2"

# OS automation - cross-platform screenshots
xcap = "0.0.14"

[dev-dependencies]
tokio-test = "0.4"

# Platform-specific accessibility APIs
[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_UI_Accessibility",
    "Win32_System_Com",
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi"
]}

[target.'cfg(target_os = "macos")'.dependencies]
accessibility = "0.1"
core-foundation = "0.10"

[target.'cfg(target_os = "linux")'.dependencies]
atspi = "0.21"
zbus = "4.0"
