[package]
name = "tasker-sidecar"
version = "0.2.0"
edition = "2021"
description = "Rust sidecar for Tasker desktop automation"

[dependencies]
# Web framework (API server)
axum = { version = "0.7", features = ["ws", "macros"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# WebSocket
futures-util = "0.3"

# LLM providers (unified API for Claude, OpenAI, Gemini)
genai = "0.4"

# Image processing (screenshots + annotation)
image = "0.25"
base64 = "0.22"
imageproc = "0.25"
ab_glyph = "0.2"

# Screen capture (cross-platform: Windows, macOS, Linux)
xcap = "0.8"

# Mouse/keyboard input simulation (cross-platform)
enigo = { version = "0.3", features = [] }

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0"
anyhow = "1.0"
dashmap = "6.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
regex = "1.10"
dotenvy = "0.15"
async-trait = "0.1"
urlencoding = "2.1"

# Local config (read API keys from Tauri's database)
rusqlite = { version = "0.32", features = ["bundled"] }
dirs = "5.0"

# HTTP client for Railway proxy
reqwest = { version = "0.12", features = ["json"] }

# Secure credential storage (to read auth token)
keyring = "3"

# MIME type detection for file storage
mime_guess = "2.0"

# Windows-specific: UI Automation tree extraction
[target.'cfg(windows)'.dependencies]
uiautomation = "0.24"

[dev-dependencies]
tokio-test = "0.4"
